add-english-language-and-translate-components

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,216 @@
 en:
   app:
     title: "Parallel Corpus"
+  header:
+    english_georgian: "English Georgian"
+    parallel_corpus: "Parallel Corpus"
+  navbar:
+    advanced_search: "Advanced search"
+    instruments: "Instruments"
+    instructions: "Usage Instructions"
+    about_project: "About Project"
+    contact: "Contact"
+  buttons:
+    search: "Search"
+    new_publishing: "Add new publishing"
+    log_in_with: "Log in with %{provider}"
+    have_not_received_unlock_instruction: "Haven't received unlock instruction?"
+    have_not_received_confirmation_instruction: "Haven't received confirmation instruction?"
+    forgot_password: "Forgot password?"
+    sign_up: "Sign up"
+    log_in: "Log in"
+    send_me_password_reset_instruction: "Send me password reseting instructions"
+  statistics:
+    groups: "Groups"
+    collections: "Collections"
+    text_pairs: "Pairs"
+    word_forms: "Word Forms"
+  advanced_search:
+    only_terminology: "Only Terminology"
+    exact_match: "Exact Match"
+    original_language: "Original Language"
+    georgian: "Georgian"
+    english: "English"
+    both: "Both"
+    sub_corpora: "Sub Corpora"
+    groups: "Groups"
+    collections: "Collections"
+    types: "Types"
+    genres: "Genres"
+    fields: "Fields"
+    authors: "Authors"
+    translators: "Translators"
+    publishers: "Publishers"
+    published: "Published"
+    from_year: "From year"
+    to_year: "To year"
+    translated: "Translated"
+    results: "Results"
+    author: "Author"
+    translator: "Translator"
+    type: "Type"
+    genre: "Genre"
+    field: "Field"
+    publisher: "Publisher"
+    published_date: "Publishing year"
+    translated_date: "Translation Year"
+    displayed: "Displayed"
+    records: "Records from"
+    from_records: "Records"
+    previous: "Previous"
+    next: "Next"
+  admin:
+    fields: "Fields"
+    add_new_field: "Add new Field"
+    publishings: "Publishings"
+    edit_publishings: "Edit publishing"
+    add_new_collection: "Add new Collection"
+    authors: "Authors"
+    translators: "Translators"
+    types: "Types"
+    genres: "Genres"
+    users: "Users"
+    logged_in_as: "Logged in as %{user}"
+    edit_type: "Edit type"
+    add_new_publishing: "Add new publishing"
+    edit_field: "Edit field"
+    edit_genre: "Edit Genre"
+    add_new_genre: "Add new genre"
+    form:
+      sub_corpora: "Subcorpora"
+      name_ka: "Name (ka)"
+      name_en: "Name (en)"
+      comment: "Comment"
+      status: "Status"
+      should_sync: "Synced collections"
+      back: "Go Back"
+      delete: "Delete"
+      submit: "Submit"
+      collections: "Collections"
+      text_pairs: "Pairs"
+      group: "Group"
+      authors: "Authors"
+      translators: "Translators"
+      types: "Types"
+      fields: "Fields"
+      genres: "Genres"
+      publishings: "Publishings"
+      year_published: "Published in (year)"
+      year_translated: "Translated in (year)"
+      original_language: "Original language"
+    edit_group: "Edit Group"
+    add_new_group: "Add new Group"
+    edit_collection: "Edit Collection"
+    add_new_text_pairs: "Add Text Pairs"
+    edit_user: "Edit User"
+    add_new_user: "Add new user"
+    email: "Email"
+    role: "Role"
+    status: "Status"
+    add_new_type: "Add new type"
+    edit_translator: "Edit translator"
+    text_pairs: "Text Pairs"
+    edit_text_pairs: "Edit Text Pairs"
+    delete_all_text_pairs: "Delete all text pairs"
+    download_text_pairs_as_an_excel: "Download text pairs as Excel file"
+    download_georgian_text_as_a_word: "Download Georgian text as a word file."
+    download_english_text_as_a_word: "Download English text as a word file"
+    save_all_button: "Save all"
+    select_as_term: "Select as term"
+    split_block_in_two: "Split the block in two parts"
+    delete_block: "Delete the block"
+    merge_blocks: "Merge upper and lower blocks into one block"
+    exchange_blocks: "Exchange upper and lower blocks order"
+    add_new_block: "Add new block"
+    add_new_sub_corpora: "Add new subcorpora"
+    sub_corpora: "Subcorpora"
+    edit_sub_corpus: "Edit Subcorpus"
+    add_new_author: "Add new author"
+    edit_author: "Edit author"
+    search_by_id: "Search by ID"
+    search_by_text: "Search by Text"
+  table:
+    georgian_name: "Georgian Name"
+    english_name: "English Name"
+    georgian_name_and_surname: "First and Last name in Georgian"
+    english_name_and_surname: "First and Last name in English"
+    georgian_sentence: "Georgian sentence"
+    english_sentence: "English sentence"
+    status: "Status"
+    groups: "Groups"
+    collections: "Collections"
+    pairs: "Pairs"
+  delete_publishing_modal:
+    title: "Are you sure you want to delete the publishing?"
+    text: "This publishing will be deleted completely"
+  crumbs:
+    add_new_sub_corpora: "Add new subcorpora"
+    sub_corpora: "Subcorpora"
+    collections: "Collections"
+    text_pairs: "Text Pairs"
+    groups: "Groups"
+    edit: "Edit"
+  delete_type_modal:
+    title: "Do you want to delete Type?"
+    text: "This type will be deleted completely."
+  delete_field_modal:
+    title: "Do you want to delete field?"
+    text: "This field will be deleted completely"
+  delete_genre_modal:
+    title: "Do you want to delete Genre?"
+    text: "This genre will be deleted completely."
+  delete_group_modal:
+    title: "Do you want to delete group?"
+    text: "Group will be deleted completely"
+  delete_collection_modal:
+    modal_title: "Do you want to delete Collection?"
+    modal_text: "Collection will be deleted completely"
+  delete_modal:
+    delete: "Delete"
+    cancel: "Cancel"
+    agree: "I agree"
+  delete_user_modal:
+    title: "Do you want to delete user?"
+    text: "User will be deleted completely"
+  users:
+    set_password: "Set Password"
+    password: "Password"
+    repeat_password: "Repeat password"
+    send_invitation: "Send an invitation"
+    send: "Send"
+  invitation_email:
+    greeting: "Hello %{email}"
+    p1: "Someone invited you from %{root_url}. You can accept invitation by a link below."
+    link: "Accept invitation"
+    p2: "If you don't want to accept the invitation, just ignore the email and we won't register you."
+  add_new_translator: "Add new translator"
+  delete_translator_modal:
+    title: "Do you want to delete the translator?"
+    text: "This translator will be deleted completely"
+  delete_text_pairs_modal:
+    title: "Do you want to delete text pairs?"
+    text: "All text pairs from selected collection will be deleted."
+  delete_text_block_modal:
+    title: "Do you want to delete the text block?"
+    text: "This text block will be deleted completely."
+  delete_sub_corpora_modal:
+    title: "Do you want to delete subcorpora?"
+    text: "Subcorpus will be deleted completely."
+  delete_author_modal:
+    title: "Do you want to delete an author?"
+    text: "The author will be deleted completely."
+  sessions:
+    please_log_in: "Please log in"
+    email: "Email"
+    remember_me: "Remember me"
+    password: "Password"
+  passwords:
+    confirm_password: "Confirm password"
+    new_password: "New password"
+    minimum_symbols: "Minimum %{length} symbols required"
+    change_password: "Change password"
+  other_language: "ქა"
+  window:
+    alert:
+      updated_successfully: "Updated Successfully"
+      error_while_updating: "There was an error while trying to update."
