--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -1,3 +1,216 @@
 ka:
   app:
     title: "პარალელური კორპუსი"
+  header:
+    english_georgian: "ინგლისურ ქართული"
+    parallel_corpus: "პარალელური კორპუსი"
+  navbar:
+    advanced_search: "დეტალური ძიება"
+    instruments: "ინსტრუმენტები"
+    instructions: "გამოყენების ინსტრუქცია"
+    about_project: "პროექტის შესახებ"
+    contact: "კონტაქტი"
+  buttons:
+    search: "ძიება"
+    new_publishing: "ახალი გამომცემლობის დამატება"
+    log_in_with: "შესვლა %{provider}თი"
+    have_not_received_unlock_instruction: "არ მიგიღია განბლოკვის ინსტრუქცია?"
+    have_not_received_confirmation_instruction: "არ მიგიღია დადასტურების ინსტრუქცია?"
+    forgot_password: "დაგავიწყდა პაროლი?"
+    sign_up: "დარეგისტრირება"
+    log_in: "შესვლა"
+    send_me_password_reset_instruction: "გამომიგზავნე პაროლის აღდგენის ინსტრუქცია"
+  statistics:
+    groups: "ჯგუფები"
+    collections: "კრებულები"
+    text_pairs: "წყვილები"
+    word_forms: "სიტყვაფორმები"
+  advanced_search:
+    only_terminology: "მხოლოდ ტერმინოლოგია"
+    exact_match: "ზუსტი დამთხვევა"
+    original_language: "ორიგინალის ენა"
+    georgian: "ქართული"
+    english: "ინგლისური"
+    both: "ორივე"
+    sub_corpora: "ქვეკორპუსები"
+    groups: "ჯგუფები"
+    collections: "კრებულები"
+    types: "ტიპები"
+    genres: "ჟანრები"
+    fields: "დარგები"
+    authors: "ავტორები"
+    translators: "მთარგმნელები"
+    publishers: "გამომცემლობები"
+    published: "გამოცემულია"
+    from_year: "წლიდან"
+    to_year: "წლამდე"
+    translated: "თარგმნილია"
+    results: "შედეგი"
+    author: "ავტორი"
+    translator: "მთარგმნელი"
+    type: "ტიპი"
+    genre: "ჟანრი"
+    field: "დარგი"
+    publisher: "გამომცემლობა"
+    published_date: "გამოცემის წელი"
+    translated_date: "თარგმნის წელი"
+    displayed: "ნაჩვენებია"
+    records: "ჩანაწერი"
+    from_records: "ჩანაწერიდან"
+    previous: "წინა"
+    next: "შემდეგი"
+  admin:
+    fields: "დარგები"
+    add_new_field: "ახალი დარგის დამატება"
+    publishings: "გამომცემლობები"
+    edit_publishings: "გამომცემლობის რედაქტირება"
+    add_new_collection: "კრებულის დამატება"
+    authors: "ავტორები"
+    translators: "მთარგმნელები"
+    types: "ტიპები"
+    genres: "ჟანრები"
+    users: "მომხმარებლები"
+    logged_in_as: "შესული ხართ როგორც %{user}"
+    edit_type: "ტიპის რედაქტირება"
+    add_new_publishing: "გამომცემლობის დამატება"
+    edit_field: "დარგის რედაქტირება"
+    edit_genre: "ჟანრის რედაქტირება"
+    add_new_genre: "ახალი ჟანრის დამატება"
+    form:
+      sub_corpora: "ქვეკორპუსი"
+      name_ka: "სახელი (ka)"
+      name_en: "სახელი (en)"
+      comment: "კომენტარი"
+      status: "სტატუსი"
+      should_sync: "სინქრონიზებული კრებულები"
+      back: "უკან დაბრუნება"
+      delete: "წაშლა"
+      submit: "შენახვა"
+      collections: "კრებულები"
+      text_pairs: "წყვილები"
+      group: "ჯგუფი"
+      authors: "ავტორები"
+      translators: "მთარგმნელები"
+      types: "ტიპები"
+      fields: "დარგები"
+      genres: "ჟანრები"
+      publishings: "გამომცემლობები"
+      year_published: "გამოცემის წელი"
+      year_translated: "თარგმნის წელი"
+      original_language: "ორიგინალის ენა"
+    edit_group: "ჯგუფის რედაქტირება"
+    add_new_group: "ახალი ჯგუფის დამატება"
+    edit_collection: "კრებულის რედაქტირება"
+    add_new_text_pairs: "ტექსტური წყვილების დამატება"
+    edit_user: "მომხმარებლის რედაქტირება"
+    add_new_user: "ახალი მომხმარებლის დამატება"
+    email: "იმეილი"
+    role: "როლი"
+    status: "სტატუსი"
+    add_new_type: "ახალი ტიპის დამატება"
+    edit_translator: "მთარგმნელის რედაქტირება"
+    text_pairs: "ტექსტური წყვილები"
+    edit_text_pairs: "ტექსტური წყვილების რედაქტირება"
+    delete_all_text_pairs: "ყველა ტექსტური წყვილის წაშლა"
+    download_text_pairs_as_an_excel: "ტექსტური წყვილების ექსელის ფაილად ჩამოწერა"
+    download_georgian_text_as_a_word: "ქართული ტექსტის ვორდის ფაილად ჩამოწერა"
+    download_english_text_as_a_word: "ინგლისური ტექსტის ვორდის ფაილად ჩამოწერა"
+    save_all_button: "ყველას შენახვა"
+    select_as_term: "ტერმინის მონიშვნა"
+    split_block_in_two: "ბლოკის ორად გაყოფა"
+    delete_block: "ბლოკის წაშლა"
+    merge_blocks: "ზედა და ქვედა ბლოკის ერთში გაერთიანება"
+    exchange_blocks: "ზედა და ქვედა ბლოკის ადგილების გაცვლა"
+    add_new_block: "ახალი ბლოკის დამატება"
+    add_new_sub_corpora: "ქვეკორპუსის დამატება"
+    sub_corpora: "ქვეკორპუსები"
+    edit_sub_corpus: "ქვეკორპუსის რედაქტირება"
+    add_new_author: "ავტორის დამატება"
+    edit_author: "ავტორის რედაქტირება"
+    search_by_id: "ID-თი ძიება"
+    search_by_text: "ტექსტით ძიება"
+  table:
+    georgian_name: "დასახელება ქართულად"
+    english_name: "დასახელება ინგლისურად"
+    georgian_name_and_surname: "სახელი და გვარი ქართულად"
+    english_name_and_surname: "სახელი და გვარი ინგლისურად"
+    georgian_sentence: "ქართული წინადადება"
+    english_sentence: "ინგლისური წინადადება"
+    status: "სტატუსი"
+    groups: "ჯგუფები"
+    collections: "კრებულები"
+    pairs: "წყვილები"
+  delete_publishing_modal:
+    title: "გსურთ გამომცემლობის წაშლა?"
+    text: "ეს გამომცემლობა წაიშლება სრულად"
+  crumbs:
+    add_new_sub_corpora: "ახალი კრებულის დამატება"
+    sub_corpora: "ქვეკორპუსები"
+    collections: "კრებულები"
+    text_pairs: "ტექსტური წყვილები"
+    groups: "ჯგუფები"
+    edit: "რედაქტირება"
+  delete_type_modal:
+    title: "გსურთ ტიპის წაშლა?"
+    text: "ეს ტიპი წაიშლება სრულად"
+  delete_field_modal:
+    title: "გსურთ დარგის წაშლა?"
+    text: "ეს დარგი წაიშლება სრულად"
+  delete_genre_modal:
+    title: "გსურთ ჟანრის წაშლა?"
+    text: "ეს ჟანრი წაიშლება სრულად"
+  delete_group_modal:
+    title: "გსურთ ჯგუფის წაშლა?"
+    text: "ჯგუფი წაიშლება სრულად"
+  delete_collection_modal:
+    modal_title: "გსურთ კრებულის წაშლა?"
+    modal_text: "კრებული წაიშლება სრულად"
+  delete_modal:
+    delete: "წაშლა"
+    cancel: "გაუქმება"
+    agree: "ვეთანხმები"
+  delete_user_modal:
+    title: "გსურთ მომხმარებლის წაშლა?"
+    text: "მომხმარებელი წაიშლება სრულად"
+  users:
+    set_password: "დააყენეთ პაროლი"
+    password: "პაროლი"
+    repeat_password: "გაიმეორეთ პაროლი"
+    send_invitation: "გაგზავნეთ მოწვევა"
+    send: "გაგზავნა"
+  invitation_email:
+    greeting: "გამარჯობა %{email}"
+    p1: "ვიღაცამ მოგიწვიათ %{root_url}-იდან. შეგიძლიათ დათანხმდეთ ქვემოთ მოცემული ბმულით."
+    link: "დათანხმდით შემოთავაზებას"
+    p2: "თუ არ გინდათ მოწვევაზე დათახმება, უბრალოდ არ მიაქციუთ ყურადღება ამ იმეილს, თქვენი ანგარიში არ შეიქმნება თქვენი თანხმობის გარეშე."
+  add_new_translator: "მთარგმნელის დამატება"
+  delete_translator_modal:
+    title: "გსურთ მთარგმნელის წაშლა?"
+    text: "ეს მთარგმნელი წაიშლება სრულად"
+  delete_text_pairs_modal:
+    title: "გსურთ ტექსტური წყვილების წაშლა?"
+    text: "ყველა ტექტური წყვილი ამ კრებულში წაიშლება სრულად"
+  delete_text_block_modal:
+    title: "გსურთ ტექსტური ბლოკის წაშლა?"
+    text: "ეს ტექტური ბლოკი წაიშლება სრულად"
+  delete_sub_corpora_modal:
+    title: "გსურთ ქვეკორპუსის წაშლა?"
+    text: "ქვეკორპუსი წაიშლება სრულად"
+  delete_author_modal:
+    title: "გსურთ ავტორის წაშლა?"
+    text: "ეს ავტორი წაიშლება სრულად"
+  sessions:
+    please_log_in: "გთხოვთ გაიაროთ ავტორიზაცია"
+    email: "იმეილი"
+    remember_me: "დამიმახსოვრე"
+    password: "პაროლი"
+  passwords:
+    confirm_password: "გაიმეორეთ პაროლი"
+    new_password: "ახალი პაროლი"
+    minimum_symbols: "მინიმუმ %{length} სიმბოლო"
+    change_password: "შეცვალეთ პაროლი"
+  other_language: "EN"
+  window:
+    alert:
+      updated_successfully: "ცვლილებები განახლდა წარმატებით."
+      error_while_updating: "ცვლილებების შენახვისას წარმოიშვა შეცდომა."
