--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -203,8 +203,8 @@ ka:
     title: "გსურთ მთარგმნელის წაშლა?"
     text: "ეს მთარგმნელი წაიშლება სრულად"
   delete_text_pairs_modal:
-    title: "გსურთ ტექსტური წყვილების წაშლა?"
-    text: "ყველა ტექტური წყვილი ამ კრებულში წაიშლება სრულად"
+    title: "გსურთ ტექსტური წყვილის წაშლა?"
+    text: "არჩეული ტექტური წყვილი ამ კრებულიდან წაიშლება"
   delete_text_block_modal:
     title: "გსურთ ტექსტური ბლოკის წაშლა?"
     text: "ეს ტექტური ბლოკი წაიშლება სრულად"
