--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -73,7 +73,7 @@ ka:
     from_records: "ჩანაწერიდან"
     previous: "წინა"
     next: "შემდეგი"
-    no_results: "მოიძებნა 0 ჩანაწერი"
+    results: "მოიძებნა %{results} ჩანაწერი"
   admin:
     fields: "დარგები"
     add_new_field: "ახალი დარგის დამატება"
